# DocsVersaTul

./: .readthedocs.yaml  DOCUMENTATION_ADOPTION_PLAN.md  DOCUMENTATION_REDESIGN_PLAN.md  DOCUMENTATION_VALIDATION.md  PACKAGE_DOC_TEMPLATE.md  README.rst  pyproject.toml
docs/: requirements.txt
docs/source/: attributes.rst  bulk.rst  caching.rst  compatibility.rst  compression.rst  conf.py  configuration-defaults.rst  configuration.rst  contracts.rst  converters.rst  data-contracts.rst  display-attributes.rst  efcore.rst  extensions.rst  faq.rst  file-reader.rst  filereader.rst  getting-started.rst  handler-file.rst  index.rst  logger-file.rst  logger-mail.rst  logger-web.rst  logger.rst  mailer.rst  mongodb.rst  mssql.rst  package-catalog.rst  package-selection.rst  pipeline-infrastructure.rst  recommended-paths.rst  scheduler.rst  sql.rst  streamers.rst  usage.rst  utilities.rst
docs/source/scenario-guides/: data-export.rst  file-import.rst  index.rst  logging-setup.rst  sql-data-access.rst
