[build-system]
requires = ["flit_core>=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "DocsVersaTul"
version = "0.0.0"
description = "Sphinx documentation for the VersaTul .NET library ecosystem."
authors = [{ name = "Bjorn Williams", email = "bjorn.williams@gmail.com" }]
requires-python = ">=3.10"
